load("@io_bazel_rules_go//go:def.bzl", "go_binary")

licenses(["notice"])  # Apache 2.0

package(
    default_visibility = ["//tools/celrpc:__subpackages__"]
)

go_binary(
    name="main",
    srcs = ["main.go"],
    deps = [
        "@org_golang_google_genproto//googleapis/api/expr/conformance/v1alpha1:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
        "@org_golang_google_genproto//googleapis/rpc/status:go_default_library", 
        "@org_golang_google_grpc//codes:go_default_library"  
    ]
)