package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "test_all_types_proto",
    srcs = ["test_all_types.proto"],
    strip_import_prefix = "/proto",
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

##############################################################################
# Java
##############################################################################

load("@com_google_protobuf//bazel:java_proto_library.bzl", "java_proto_library")

java_proto_library(
    name = "test_all_types_java_proto",
    deps = [":test_all_types_proto"],
)

##############################################################################
# Javalite
##############################################################################

load("@com_google_protobuf//bazel:java_lite_proto_library.bzl", "java_lite_proto_library")

java_lite_proto_library(
    name = "test_all_types_java_proto_lite",
    deps = [":test_all_types_proto"],
)

###############################################################################
## Go
###############################################################################

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "test_all_types_go_proto",
    importpath = "cel.dev/expr/conformance/proto3",
    protos = [":test_all_types_proto"],
)

###############################################################################
## C++
###############################################################################

load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")

cc_proto_library(
    name = "test_all_types_cc_proto",
    deps = [":test_all_types_proto"],
)

###############################################################################
## upb
###############################################################################

load("@com_google_protobuf//bazel:upb_c_proto_library.bzl", "upb_c_proto_library")
load("@com_google_protobuf//bazel:upb_proto_reflection_library.bzl", "upb_proto_reflection_library")

upb_c_proto_library(
    name = "test_all_types_upb_proto",
    deps = [":test_all_types_proto"],
)

upb_proto_reflection_library(
    name = "test_all_types_upb_proto_reflection",
    deps = [":test_all_types_proto"],
)
