package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "simple_proto",
    srcs = ["simple.proto"],
    strip_import_prefix = "/proto",
    deps = [
        "//proto/cel/expr:checked_proto",
        "//proto/cel/expr:eval_proto",
        "//proto/cel/expr:value_proto",
    ],
)

cc_proto_library(
    name = "simple_cc_proto",
    deps = [":simple_proto"],
)

go_proto_library(
    name = "simple_go_proto",
    importpath = "cel.dev/expr/conformance/test",
    protos = [":simple_proto"],
    deps = [
        "//proto/cel/expr:expr_go_proto",
    ],
)

java_proto_library(
    name = "simple_java_proto",
    deps = [":simple_proto"],
)
