package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

##############################################################################
# Common
##############################################################################

proto_library(
    name = "simple_proto",
    srcs = ["simple.proto"],
    strip_import_prefix = "/proto",
    deps = [
        "//proto/cel/expr:checked_proto",
        "//proto/cel/expr:eval_proto",
        "//proto/cel/expr:value_proto",
    ],
)

proto_library(
    name = "suite_proto",
    srcs = ["suite.proto"],
    strip_import_prefix = "/proto",
    deps = [
        "//proto/cel/expr:checked_proto",
        "//proto/cel/expr:eval_proto",
        "//proto/cel/expr:value_proto",
        "//proto/cel/expr/conformance:env_config_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

##############################################################################
## C++
##############################################################################

cc_proto_library(
    name = "simple_cc_proto",
    deps = [":simple_proto"],
)

cc_proto_library(
    name = "suite_cc_proto",
    deps = [":suite_proto"],
)

##############################################################################
## Go
##############################################################################

go_proto_library(
    name = "simple_go_proto",
    importpath = "cel.dev/expr/conformance/test",
    protos = [":simple_proto"],
    deps = [
        "//proto/cel/expr:expr_go_proto",
    ],
)

go_proto_library(
    name = "suite_go_proto",
    importpath = "cel.dev/expr/conformance/test",
    protos = [":suite_proto"],
    deps = [
        "//proto/cel/expr:expr_go_proto",
        "//proto/cel/expr/conformance:env_config_go_proto",
    ],
)

##############################################################################
## Java
##############################################################################

java_proto_library(
    name = "simple_java_proto",
    deps = [":simple_proto"],
)

java_proto_library(
    name = "suite_java_proto",
    deps = [":suite_proto"],
)
